Attempt at fixing hover on mobile

--- a/css/modules/article-image-hover.css
+++ b/css/modules/article-image-hover.css
@@ -53,3 +53,22 @@
 	left: 0;
 	z-index: 4;
 }
+/*  Remove if needed
+@media screen and (max-width: 480px) {
+	.main__images-first-news-first-image-hover-black {
+		position: absolute;
+		bottom: 50%;
+	}
+
+	.main__images-first-news-first-image-text-hover, 
+	.main__images-first-news-second-image-text-hover, 
+	.main__images-first-news-third-image-text-hover, 
+	.main__images-first-news-fourth-image-text-hover, 
+	.main__images-first-news-sixth-image-text-hover, 
+	.main__images-first-news-seventh-image-text-hover, 
+	.main__images-first-news-eighth-image-text-hover {
+		position: absolute;
+		top: -50px;
+		left: 0;
+	}
+} */
